[gd_scene load_steps=14 format=3 uid="uid://dnqoa5ujl7hdk"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_prnk2"]
[ext_resource type="Texture2D" uid="uid://bp3xt3kk1dh3d" path="res://assets/3 Dude_Monster/Turtle.png" id="2_pojl4"]
[ext_resource type="PackedScene" uid="uid://b77jiwkahvoq7" path="res://scenes/attack_1.tscn" id="3_b4bp0"]
[ext_resource type="FontFile" uid="uid://bd54w4go6mh5x" path="res://assets/Minecraft.ttf" id="4_8eltt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oodh0"]
radius = 2600.0
height = 10000.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p11lo"]
radius = 15.0
height = 52.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bym8g"]
bg_color = Color(0.819608, 0.521569, 0.25098, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.32549)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kraw4"]
bg_color = Color(0, 1, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 1, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="CircleShape2D" id="CircleShape2D_uwjck"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dvnqg"]
radius = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtbad"]
bg_color = Color(0.4, 0.4, 0.4, 0.0470588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yelfv"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_72xd2"]

[node name="Player" type="CharacterBody2D"]
position = Vector2(579, 298)
platform_floor_layers = 4294967040
script = ExtResource("1_prnk2")

[node name="P_Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
scale = Vector2(2, 2)
texture = ExtResource("2_pojl4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.005, 0.005)
shape = SubResource("CapsuleShape2D_oodh0")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Attack1" parent="." instance=ExtResource("3_b4bp0")]
position = Vector2(-2, 2)

[node name="Hitbox" type="Area2D" parent="."]
unique_name_in_owner = true
light_mask = 0
visibility_layer = 2
position = Vector2(0, 11)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1, -12)
shape = SubResource("CapsuleShape2D_p11lo")
debug_color = Color(1, 0, 0, 0.423529)

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -37.0
offset_top = -51.0
offset_right = 39.0
offset_bottom = -39.0
theme_override_styles/background = SubResource("StyleBoxFlat_bym8g")
theme_override_styles/fill = SubResource("StyleBoxFlat_kraw4")
value = 100.0
show_percentage = false

[node name="GrapArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrapArea"]
shape = SubResource("CircleShape2D_uwjck")
debug_color = Color(1, 0.572549, 0, 0.282353)

[node name="CollectArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_dvnqg")
debug_color = Color(0.47009, 0.590492, 9.62615e-07, 0.42)

[node name="Area2D" type="Area2D" parent="CollectArea"]

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 15.0
offset_right = 1146.0
offset_bottom = 655.0

[node name="ExperienceBar" type="ProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -18.0
offset_top = 618.0
offset_right = 1134.0
offset_bottom = 632.0
theme_override_styles/background = SubResource("StyleBoxFlat_gtbad")
theme_override_styles/fill = SubResource("StyleBoxFlat_yelfv")
value = 50.0
show_percentage = false

[node name="Label_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.0
offset_top = -25.0
offset_right = 62.0
offset_bottom = -2.0
text = "Level 1"

[node name="Time_Label" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
z_as_relative = false
texture_filter = 6
texture_repeat = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.574
anchor_top = 0.083
anchor_right = 0.574
anchor_bottom = 0.083
offset_left = -60.62
offset_top = -25.12
offset_right = -14.62
offset_bottom = -7.12
scale = Vector2(3.00315, 2.12)
theme_override_fonts/font = ExtResource("4_8eltt")
theme_override_font_sizes/font_size = 20
text = "00:00"
label_settings = SubResource("LabelSettings_72xd2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnAttack1" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(56, 1)

[connection signal="health_depleted" from="." to="." method="_on_health_depleted"]
[connection signal="area_entered" from="GrapArea" to="." method="_on_grap_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
